# warwick-typ

./: .gitignore  README.md  notes.txt
project/framework_test/: .gitignore  CMakeLists.txt  main.cpp
project/framework_test/assets/: fluid.json  fluid_1000.json  fluid_200.json  fluid_300.json  fluid_accurate.json  overall_test.sh  parse_tests.py  size_cache_test.sh  test.sh  test_accuracy.sh
project/framework_test/src/: CMakeLists.txt  main.cpp
project/framework_test/src/cmd_line/: CommandLineConverters.cpp  CommandLineConverters.h  CommandLineParser.cpp  CommandLineParser.h
project/framework_test/src/cmd_line/subapps/: CompareSubApp.cpp  CompareSubApp.h  ConvertBinaryToJSONSubApp.cpp  ConvertBinaryToJSONSubApp.h  ConvertOldBinaryToNewBinarySubApp.cpp  ConvertOldBinaryToNewBinarySubApp.h  FixedTimeSimSubApp.cpp  FixedTimeSimSubApp.h  ISubApp.h  InteractiveSubApp.cpp  InteractiveSubApp.h  LegacyRenderPPMSubApp.cpp  LegacyRenderPPMSubApp.h  MakeInputSubApp.cpp  MakeInputSubApp.h  ResidualSubApp.cpp  ResidualSubApp.h
project/framework_test/src/cuda_simulation/: cuda_memory_wrappers.cu  cuda_memory_wrappers.h  cuda_red_black_pair.h  cuda_sim.h  cuda_vulkan_memory_wrappers.h
project/framework_test/src/memory/: Allocator.h  Allocator_fwd.h  FrameAllocator.h  FrameSetAllocator.h  MType.h  Sim2DArray.h  SimRedBlackArray.h  VulkanFrameSetAllocator.h
project/framework_test/src/memory/internal/: FrameAllocator_fwd.h  MType.h  Sim2DArray.h  SimArray_Constructors.inl  SimRedBlackArray.h
project/framework_test/src/memory/vulkan/: VulkanCudaBufferMemory.cpp  VulkanCudaBufferMemory.h
project/framework_test/src/rendering/shaders/: CMakeLists.txt  compute_minmax_reduce.comp  compute_particle_emit.comp  compute_particle_kickoff.comp  compute_particle_simulate.comp  compute_scalar_extract.comp  compute_sim_data_image.comp  compute_update_particles.comp  compute_vector_extract.comp  compute_vectorarrow_generate.comp  compute_vectorarrow_generate.comp.glsl  fullscreen_quad.vert  global_descriptor_sets.glsl  global_structures.glsl  global_structures.h  particle.frag  particle.vert  quantity_scalar.frag  quantity_scalar.vert  sim_pressure.frag  uv.frag  vectorarrow.frag  vectorarrow.vert
project/framework_test/src/rendering/threads/: BaseThread.h  IWorkerThread.h  IWorkerThread_Impl.inl  SystemThreadWorker.cpp  SystemThreadWorker.h  ThreadWorkData.h  WorkerThreadController.h
project/framework_test/src/rendering/threads/work/: SystemWorker.cpp  SystemWorker.h
project/framework_test/src/rendering/vulkan/: SimAppProperties.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorSetLayout.h  VulkanDeviceMemory.cpp  VulkanFence.cpp  VulkanFence.h  VulkanMinMaxReducer.cpp  VulkanMinMaxReducer.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineSet.cpp  VulkanPipelineSet.h  VulkanQueueFamilies.cpp  VulkanQueueFamilies.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.h  VulkanSemaphoreSet.h  VulkanSetup.cpp  VulkanSetup.h  VulkanShader.cpp  VulkanShader.h  VulkanSimApp.cpp  VulkanSimApp.h  VulkanSimAppData.cpp  VulkanSimAppData.h  VulkanSimPipelineSet.cpp  VulkanSimPipelineSet.h  VulkanSimSemaphoreSet.cpp  VulkanSimSemaphoreSet.h  VulkanWindow.cpp  VulkanWindow.h
project/framework_test/src/rendering/vulkan/helpers/: VulkanBackedBuffer.cpp  VulkanBackedBuffer.h  VulkanBackedFramebuffer.cpp  VulkanBackedFramebuffer.h  VulkanBackedGPUBuffer_WithStaging.cpp  VulkanBackedGPUBuffer_WithStaging.h  VulkanBackedGPUImage.cpp  VulkanBackedGPUImage.h  VulkanDebug.h  VulkanDescriptorSetLayout.cpp  VulkanDeviceMemory.cpp  VulkanDeviceMemory.h  VulkanFence.cpp  VulkanFence.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImageSampler.cpp  VulkanImageSampler.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineSpecMap.h  VulkanQueueFamilies.cpp  VulkanQueueFamilies.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanSemaphoreSet.cpp  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanVertexInformation.cpp  VulkanVertexInformation.h
project/framework_test/src/rendering/vulkan/mesh/: particle_instance.cpp  particle_instance.h  vk_format.h
project/framework_test/src/rendering/vulkan/viz/: enums.cpp  enums.h  vertex.cpp  vertex.h  vk_format.h
project/framework_test/src/simulation/: SimulationBackendEnum.h  SimulationParameters.h  get_sims.cpp  get_sims.h  interface.h
project/framework_test/src/simulation/backends/cpu_simple/: CpuOptimizedSimBackend.cpp  CpuOptimizedSimBackend.h  CpuSimBackendBase.cpp  CpuSimBackendBase.h  CpuSimpleSimBackend.cpp  CpuSimpleSimBackend.h  CpuSimpleSimulation.cpp  CpuSimpleSimulation.h  CpuSimpleSimulationBackend.cpp  CpuSimpleSimulationBackend.h
project/framework_test/src/simulation/backends/cuda/: BaseCudaBackend.cuh  CudaBackendV1.cu  CudaBackendV1.cuh  cuda_memory_wrappers.cu  cuda_memory_wrappers.cuh  cuda_red_black_pair.h  cuda_sim.h  cuda_vulkan_memory_wrappers.h  interface.h
project/framework_test/src/simulation/backends/null/: NullSimulation.cpp  NullSimulation.h
project/framework_test/src/simulation/backends/original/: constants.h  simulation.cpp  simulation.h
project/framework_test/src/simulation/file_format/: FluidParams.cpp  FluidParams.h  LegacySimDump.cpp  LegacySimDump.h  LegacySimSize.h  LegacySimulationParameters.h  SimParams.cpp  SimParams.h  SimSize.h  SimSnapshot.cpp  SimSnapshot.h  legacy.cpp  legacy.h
project/framework_test/src/simulation/memory/: BasicSimulationAllocator.h  CUDA2DUnifiedAllocator.cu  CUDA2DUnifiedAllocator.h  CudaUnified2DAllocator.cu  CudaUnified2DAllocator.cuh  Host2DAllocator.cpp  Host2DAllocator.h  I2DAllocator.cpp  I2DAllocator.h  SimulationAllocs.h
project/framework_test/src/simulation/runners/: ISimTickedRunner.h  SimTickedRunner.inl
project/framework_test/src/util/: ForgetOnMove.h  LegacyCompat2DBackingArray.h  Size.h  check_cuda_error.cuh  check_vulkan_error.h  fatal_error.cpp  fatal_error.h  glm.h  host_visible_array.h  selectors.h
project/framework_test/src/validation/: SimDumpDifferenceData.cpp  SimDumpDifferenceData.h
(+71 files in other folders)
