add_library(generic_sources INTERFACE )
target_sources(generic_sources INTERFACE
        cmd_line/CommandLineConverters.h
        cmd_line/CommandLineConverters.cpp
        cmd_line/CommandLineParser.cpp
        cmd_line/CommandLineParser.h
        cmd_line/subapps/ISubApp.h
        cmd_line/subapps/MakeInputSubApp.cpp
        cmd_line/subapps/MakeInputSubApp.h
        cmd_line/subapps/ConvertOldBinaryToNewBinarySubApp.cpp
        cmd_line/subapps/ConvertOldBinaryToNewBinarySubApp.h
        cmd_line/subapps/FixedTimeSimSubApp.cpp
        cmd_line/subapps/FixedTimeSimSubApp.h
        cmd_line/subapps/CompareSubApp.cpp
        cmd_line/subapps/CompareSubApp.h
        cmd_line/subapps/LegacyRenderPPMSubApp.cpp
        cmd_line/subapps/LegacyRenderPPMSubApp.h
        cmd_line/subapps/InteractiveSubApp.cpp
        cmd_line/subapps/InteractiveSubApp.h
        rendering/vulkan/VulkanShader.cpp
        rendering/vulkan/VulkanShader.h
        rendering/vulkan/VulkanPipeline.cpp
        rendering/vulkan/VulkanPipeline.h
        rendering/vulkan/VulkanPipelineSet.cpp
        rendering/vulkan/VulkanPipelineSet.h
        rendering/vulkan/VulkanQueueFamilies.cpp
        rendering/vulkan/VulkanQueueFamilies.h
        rendering/vulkan/VulkanWindow.cpp
        rendering/vulkan/VulkanWindow.h
        simulation/backends/cpu_simple/optimized/CpuOptimizedAdaptedSimBackend.cpp
        simulation/backends/cpu_simple/optimized/CpuOptimizedAdaptedSimBackend.h
        simulation/backends/cpu_simple/CpuOptimizedSimBackend.cpp
        simulation/backends/cpu_simple/CpuOptimizedSimBackend.h
        simulation/backends/cpu_simple/CpuSimBackendBase.cpp
        simulation/backends/cpu_simple/CpuSimBackendBase.h
        simulation/backends/cpu_simple/CpuSimpleSimBackend.cpp
        simulation/backends/cpu_simple/CpuSimpleSimBackend.h
        simulation/backends/null/NullSimulation.cpp
        simulation/backends/null/NullSimulation.h
        simulation/backends/original/constants.h
        simulation/backends/original/simulation.h
        simulation/backends/original/simulation.cpp
        simulation/file_format/LegacySimDump.cpp
        simulation/file_format/LegacySimDump.h
        simulation/file_format/LegacySimSize.h
        simulation/file_format/FluidParams.h
        simulation/file_format/FluidParams.cpp
        simulation/file_format/SimSize.h
        simulation/file_format/SimSnapshot.h
        simulation/file_format/SimSnapshot.cpp
        simulation/runners
        simulation/runners/sim_fixedtime_runner
        simulation/runners/sim_fixedtime_runner/ISimFixedTimeRunner.cpp
        simulation/runners/sim_fixedtime_runner/ISimFixedTimeRunner.h
        simulation/runners/sim_fixedtime_runner/SimFixedTimeRunner.inl
        simulation/runners/sim_ticked_runner
        simulation/runners/sim_ticked_runner/ISimTickedRunner.cpp
        simulation/runners/sim_ticked_runner/ISimTickedRunner.h
        simulation/runners/sim_ticked_runner/SimTickedRunner.inl
        simulation/SimulationBackendEnum.h
        util/fatal_error.cpp
        util/fatal_error.h
        util/Size.h
        util/HostVisibleArray.h
        util/LegacyCompat2DBackingArray.h
        validation/SimDumpDifferenceData.cpp
        validation/SimDumpDifferenceData.h
        main.cpp
        )

add_library(cuda_sources INTERFACE)
target_sources(cuda_sources INTERFACE
        simulation/backends/cuda/CudaBackendV1.cu
        simulation/backends/cuda/CudaBackendV1.cuh
        simulation/backends/cuda/kernels/simple.cu
        simulation/backends/cuda/kernels/simple.cuh
        simulation/backends/cuda/kernels/redblack.cu
        simulation/backends/cuda/kernels/redblack.cuh
        simulation/backends/cuda/kernels/common.cuh
        simulation/backends/cuda/kernels/reduction.cuh
        simulation/backends/cuda/utils/CudaUnified2DArray.cuh
        simulation/backends/cuda/utils/CudaUnifiedRedBlackArray.cuh
        simulation/backends/cuda/utils/CudaUnifiedReducer.cuh
        )

add_subdirectory(rendering/shaders)
