add_library(generic_sources INTERFACE )
target_sources(generic_sources INTERFACE
        cmd_line/CommandLineConverters.h
        cmd_line/CommandLineConverters.cpp
        cmd_line/CommandLineParser.cpp
        cmd_line/CommandLineParser.h
        cmd_line/subapps/ISubApp.h
        cmd_line/subapps/MakeInputSubApp.cpp
        cmd_line/subapps/MakeInputSubApp.h
        cmd_line/subapps/ConvertOldBinaryToNewBinarySubApp.cpp
        cmd_line/subapps/ConvertOldBinaryToNewBinarySubApp.h
        cmd_line/subapps/FixedTimeSimSubApp.cpp
        cmd_line/subapps/FixedTimeSimSubApp.h
        cmd_line/subapps/CompareSubApp.cpp
        cmd_line/subapps/CompareSubApp.h
        cmd_line/subapps/LegacyRenderPPMSubApp.cpp
        cmd_line/subapps/LegacyRenderPPMSubApp.h
        cmd_line/subapps/InteractiveSubApp.cpp
        cmd_line/subapps/InteractiveSubApp.h
        memory/FrameSetAllocator.h
        memory/FrameAllocator.h
        memory/internal/FrameAllocator_fwd.h
        memory/internal/MType.h
        memory/internal/Sim2DArray.h
        memory/internal/SimRedBlackArray.h
        rendering/shaders/global_structures.glsl
        rendering/shaders/global_structures.h
        rendering/threads/IWorkerThread.h
        rendering/threads/IWorkerThread_Impl.inl
        rendering/threads/ThreadWorkData.h
        rendering/threads/WorkerThreadController.h
        rendering/threads/work/SystemWorker.cpp
        rendering/threads/work/SystemWorker.h
        rendering/vulkan/helpers/VulkanBackedBuffer.cpp
        rendering/vulkan/helpers/VulkanBackedBuffer.h
        rendering/vulkan/helpers/VulkanBackedGPUImage.cpp
        rendering/vulkan/helpers/VulkanBackedGPUImage.h
        rendering/vulkan/helpers/VulkanBackedFramebuffer.cpp
        rendering/vulkan/helpers/VulkanBackedFramebuffer.h
        rendering/vulkan/helpers/VulkanDebug.h
        rendering/vulkan/helpers/VulkanDeviceMemory.cpp
        rendering/vulkan/helpers/VulkanDeviceMemory.h
        rendering/vulkan/helpers/VulkanDescriptorSetLayout.cpp
        rendering/vulkan/helpers/VulkanDescriptorSetLayout.h
        rendering/vulkan/helpers/VulkanFence.cpp
        rendering/vulkan/helpers/VulkanFence.h
        rendering/vulkan/helpers/VulkanFramebuffer.cpp
        rendering/vulkan/helpers/VulkanFramebuffer.h
        rendering/vulkan/helpers/VulkanImageSampler.cpp
        rendering/vulkan/helpers/VulkanImageSampler.h
        rendering/vulkan/helpers/VulkanShader.cpp
        rendering/vulkan/helpers/VulkanShader.h
        rendering/vulkan/helpers/VulkanSemaphore.cpp
        rendering/vulkan/helpers/VulkanSemaphore.h
        rendering/vulkan/helpers/VulkanPipeline.cpp
        rendering/vulkan/helpers/VulkanPipeline.h
        rendering/vulkan/helpers/VulkanQueueFamilies.cpp
        rendering/vulkan/helpers/VulkanQueueFamilies.h
        rendering/vulkan/helpers/VulkanRenderPass.cpp
        rendering/vulkan/helpers/VulkanRenderPass.h
        rendering/vulkan/helpers/VulkanSwapchain.cpp
        rendering/vulkan/helpers/VulkanSwapchain.h
        rendering/vulkan/VulkanSimApp.cpp
        rendering/vulkan/VulkanSimApp.h
        rendering/vulkan/VulkanContext.cpp
        rendering/vulkan/VulkanContext.h
        rendering/vulkan/VulkanSimPipelineSet.cpp
        rendering/vulkan/VulkanSimPipelineSet.h
        rendering/vulkan/VulkanSimAppData.cpp
        rendering/vulkan/VulkanSimAppData.h
        simulation/backends/cpu_simple/optimized/CpuOptimizedAdaptedSimBackend.cpp
        simulation/backends/cpu_simple/optimized/CpuOptimizedAdaptedSimBackend.h
        simulation/backends/cpu_simple/CpuOptimizedSimBackend.cpp
        simulation/backends/cpu_simple/CpuOptimizedSimBackend.h
        simulation/backends/cpu_simple/CpuSimBackendBase.cpp
        simulation/backends/cpu_simple/CpuSimBackendBase.h
        simulation/backends/cpu_simple/CpuSimpleSimBackend.cpp
        simulation/backends/cpu_simple/CpuSimpleSimBackend.h
        simulation/backends/null/NullSimulation.cpp
        simulation/backends/null/NullSimulation.h
        simulation/backends/original/constants.h
        simulation/backends/original/simulation.h
        simulation/backends/original/simulation.cpp
        simulation/file_format/LegacySimDump.cpp
        simulation/file_format/LegacySimDump.h
        simulation/file_format/LegacySimSize.h
        simulation/file_format/FluidParams.h
        simulation/file_format/FluidParams.cpp
        simulation/file_format/SimSize.h
        simulation/file_format/SimSnapshot.h
        simulation/file_format/SimSnapshot.cpp
        simulation/runners
        simulation/runners/sim_fixedtime_runner
        simulation/runners/sim_fixedtime_runner/ISimFixedTimeRunner.cpp
        simulation/runners/sim_fixedtime_runner/ISimFixedTimeRunner.h
        simulation/runners/sim_fixedtime_runner/SimFixedTimeRunner.inl
        simulation/runners/sim_ticked_runner
        simulation/runners/sim_ticked_runner/ISimTickedRunner.cpp
        simulation/runners/sim_ticked_runner/ISimTickedRunner.h
        simulation/runners/sim_ticked_runner/SimTickedRunner.inl
        simulation/runners/sim_vulkan_ticked_runner
        simulation/runners/sim_vulkan_ticked_runner/ISimVulkanTickedRunner.cpp
        simulation/runners/sim_vulkan_ticked_runner/ISimVulkanTickedRunner.h
        simulation/SimulationBackendEnum.h
        util/fatal_error.cpp
        util/fatal_error.h
        util/Size.h
        util/HostVisibleArray.h
        util/LegacyCompat2DBackingArray.h
        util/selectors.h
        validation/SimDumpDifferenceData.cpp
        validation/SimDumpDifferenceData.h
        main.cpp
        )

add_library(cuda_sources INTERFACE)
target_sources(cuda_sources INTERFACE
        memory/vulkan/VulkanCudaBufferMemory.cpp
        memory/vulkan/VulkanCudaBufferMemory.h
        simulation/backends/cuda/CudaBackendV1.cu
        simulation/backends/cuda/CudaBackendV1.cuh
        simulation/backends/cuda/BaseCudaBackend.cuh
        simulation/backends/cuda/kernels/simple.cu
        simulation/backends/cuda/kernels/simple.cuh
        simulation/backends/cuda/kernels/redblack.cu
        simulation/backends/cuda/kernels/redblack.cuh
        simulation/backends/cuda/kernels/common.cuh
        simulation/backends/cuda/kernels/reduction.cuh
        simulation/backends/cuda/utils/CudaUnified2DArray.cuh
        simulation/backends/cuda/utils/CudaUnifiedRedBlackArray.cuh
        simulation/backends/cuda/utils/CudaUnifiedReducer.cuh
        simulation/backends/cuda/utils/CudaUnifiedReducer.inl
        simulation/backends/cuda/utils/CudaVulkanSemaphore.cu
        simulation/backends/cuda/utils/CudaVulkanSemaphore.cuh
        simulation/backends/cuda/utils/CudaGraphCapture.cu
        simulation/backends/cuda/utils/CudaGraphCapture.cuh
        util/check_cuda_error.cuh
        simulation/runners/sim_vulkan_ticked_runner/SimVulkanTickedCudaRunner.inl
        )

add_subdirectory(rendering/shaders)
